# backend-for-terminal-pro

./: .gitignore  LICENSE  README.md  main.py  widgets.json
advanced_examples/column_and_cell_rendering/: main.py  mock_data.json  widgets.json
advanced_examples/custom_templates/: main.py  templates.json  widgets.json
advanced_examples/form_parameter/: main.py  widgets.json
advanced_examples/grouping_widgets/: main.py  widgets.json
advanced_examples/parameters_example/: main.py  widgets.json
arcticdb_python/: README.md  main.py  widgets.json
clickhouse_example/: README.md  main.py  widgets.json
clickhouse_python/: README.md  main.py  widgets.json
elastic_example/: README.md  main.py  widgets.json
elasticsearch_python/: README.md  main.py  widgets.json
full_example/: README.md  main.py  mock_data.csv  mock_data.json  plotly_templates.py  requirements.txt  widgets.json
lotofdata_bun/: package.json
lotofdata_bun/src/: index.ts
mindsdb_example/: README.md  main.py  widgets.json
mindsdb_python/: README.md  main.py  widgets.json
plotly_example/: README.md  main.py  widgets.json
public_endpoint/: README.md  main.py  widgets.json
readfile_example/: README.md  main.py  mock_data.json  pyproject.toml  widgets.json
snowflake_connector_python/: README.md  main.py  utils.py
snowflake_example/: README.md  main.py  widgets.json
snowflake_python/: README.md  main.py  requirements.txt  widgets.json
supabase_example/: README.md  main.py  widgets.json
supabase_python/: README.md  main.py  widgets.json
widget_examples/: README.md  requirements.txt
(+28 files in other folders)
